--- a/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj
+++ b/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj
@@ -88,13 +88,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/glm;$(SolutionDir)/../../Libraries/lua/include;$(SolutionDir)/../../Libraries/sol/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;$(SolutionDir)/../../Libraries/SDL2/lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;$(SolutionDir)/../../Libraries/SDL2/lib/x64;$(SolutionDir)/../../Libraries/lua</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;lua53.lib;shell32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -105,15 +106,16 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/glm;$(SolutionDir)/../../Libraries/lua/include;$(SolutionDir)/../../Libraries/sol/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;$(SolutionDir)/../../Libraries/SDL2/lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;$(SolutionDir)/../../Libraries/SDL2/lib/x64;$(SolutionDir)/../../Libraries/lua</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;lua53.lib;shell32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -122,13 +124,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/glm;$(SolutionDir)/../../Libraries/lua/include;$(SolutionDir)/../../Libraries/sol/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;$(SolutionDir)/../../Libraries/SDL2/lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;$(SolutionDir)/../../Libraries/SDL2/lib/x64;$(SolutionDir)/../../Libraries/lua</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;lua53.lib;shell32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -139,41 +142,52 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/glm;$(SolutionDir)/../../Libraries/lua/include;$(SolutionDir)/../../Libraries/sol/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;$(SolutionDir)/../../Libraries/SDL2/lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;$(SolutionDir)/../../Libraries/SDL2/lib/x64;$(SolutionDir)/../../Libraries/lua</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;lua53.lib;shell32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Libraries\GLAD\src\glad.c" />
+    <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameData.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MusicPlayer.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Shader.cpp" />
-    <ClCompile Include="SpriteRenderer.cpp" />
-    <ClCompile Include="TextRenderer.cpp" />
+    <ClCompile Include="SpriteComponent.cpp" />
+    <ClCompile Include="TextComponent.cpp" />
     <ClCompile Include="Texture2D.cpp" />
+    <ClCompile Include="TransformComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CollisionTypeEnum.h" />
+    <ClInclude Include="Component.h" />
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="EntityManager.h" />
+    <ClInclude Include="Enum.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameData.h" />
     <ClInclude Include="GameStateEnum.h" />
+    <ClInclude Include="LayerEnum.h" />
     <ClInclude Include="MusicPlayer.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Shader.h" />
-    <ClInclude Include="SpriteRenderer.h" />
+    <ClInclude Include="SpriteComponent.h" />
     <ClInclude Include="stb_image.h" />
-    <ClInclude Include="TextRenderer.h" />
+    <ClInclude Include="TextComponent.h" />
     <ClInclude Include="Texture2D.h" />
+    <ClInclude Include="TransformComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\SpriteRendering.frag" />
