--- a/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj
+++ b/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameData.cpp" />
+    <ClCompile Include="GLUtils.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MusicPlayer.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
@@ -179,6 +180,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameData.h" />
     <ClInclude Include="GameStateEnum.h" />
+    <ClInclude Include="GLUtils.h" />
     <ClInclude Include="LayerEnum.h" />
     <ClInclude Include="MusicPlayer.h" />
     <ClInclude Include="ResourceManager.h" />
