--- a/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj
+++ b/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj
@@ -158,11 +158,14 @@
     <ClCompile Include="..\..\..\Libraries\GLAD\src\glad.c" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
+    <ClCompile Include="EventManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameData.cpp" />
     <ClCompile Include="GLUtils.cpp" />
+    <ClCompile Include="KeyboardControlComponent.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MusicPlayer.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="SpriteComponent.cpp" />
@@ -173,16 +176,20 @@
   <ItemGroup>
     <ClInclude Include="CollisionTypeEnum.h" />
     <ClInclude Include="Component.h" />
+    <ClInclude Include="ComponentsInclude.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityManager.h" />
     <ClInclude Include="Enum.h" />
+    <ClInclude Include="EventManager.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameData.h" />
     <ClInclude Include="GameStateEnum.h" />
     <ClInclude Include="GLUtils.h" />
+    <ClInclude Include="KeyboardControlComponent.h" />
     <ClInclude Include="LayerEnum.h" />
     <ClInclude Include="MusicPlayer.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="SpriteComponent.h" />
